<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.centraltrillion.worklink.view.NoticeSendActivity">

    <RelativeLayout
        android:id="@+id/notice_send_receiver_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/notice_send_receiver_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/activity_horizontal_padding"
            android:layout_marginStart="@dimen/activity_horizontal_padding"
            android:layout_centerVertical="true"
            android:text="@string/notice_send_edit_receiver"
            android:textColor="@color/text_hint_gray"
            android:textSize="@dimen/font_size_large" />

        <EditText
            android:id="@+id/notice_send_receiver_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/notice_send_receiver_tv"
            android:layout_toEndOf="@+id/notice_send_receiver_tv"
            android:layout_toLeftOf="@+id/notice_send_receiver_iv"
            android:layout_toStartOf="@+id/notice_send_receiver_iv"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:textSize="@dimen/font_size_medium"
            android:textColor="@color/list_not_read_blue"/>

        <ImageView
            android:id="@+id/notice_send_receiver_iv"
            android:layout_width="@dimen/notice_send_edit_receiver_icon_size"
            android:layout_height="@dimen/notice_send_edit_receiver_icon_size"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="@dimen/activity_horizontal_padding"
            android:layout_marginEnd="@dimen/activity_horizontal_padding"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_add" />
    </RelativeLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_hint_gray"
        android:layout_below="@+id/notice_send_receiver_rl"
        android:layout_marginTop="15dp" />

    <RelativeLayout
        android:id="@+id/notice_send_title_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider1"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/notice_send_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/activity_horizontal_padding"
            android:layout_marginStart="@dimen/activity_horizontal_padding"
            android:layout_centerVertical="true"
            android:text="@string/notice_send_edit_title"
            android:textColor="@color/text_hint_gray"
            android:textSize="@dimen/font_size_large" />

        <EditText
            android:id="@+id/notice_send_title_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/notice_send_title_tv"
            android:layout_toEndOf="@+id/notice_send_title_tv"
            android:layout_toLeftOf="@+id/notice_send_attach_iv"
            android:layout_toStartOf="@+id/notice_send_attach_iv"
            android:layout_centerVertical="true"
            android:background="@color/white" />

        <ImageView
            android:id="@+id/notice_send_attach_iv"
            android:layout_width="@dimen/notice_send_edit_receiver_icon_size"
            android:layout_height="@dimen/notice_send_edit_receiver_icon_size"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/activity_horizontal_padding"
            android:layout_marginEnd="@dimen/activity_horizontal_padding"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_paperclip" />
    </RelativeLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_hint_gray"
        android:layout_below="@+id/notice_send_title_rl"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/notice_send_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_padding"
        android:layout_marginStart="@dimen/activity_horizontal_padding"
        android:hint="@string/notice_send_edit_content"
        android:textSize="@dimen/font_size_large"
        android:background="@color/white"
        android:paddingLeft="0dp"
        android:gravity="top"
        android:textColorHint="@color/text_hint_gray" />

</RelativeLayout>
